testdata/typechecker/ok/multidim/Array3.java
int main() {
    int[][][][] a;
    a = new int[1][2+5][][];
    return 0;
}