testdata/typechecker/error/multidim/Array3.java
int main() {
    int[][][][] a;
    a = new int[1][false][][];
    return 0;
}